fix feature name

--- a/src/hashicorp-mirror/devcontainer-feature.json
+++ b/src/hashicorp-mirror/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-    "name": "hasicorp product direct install from mirror",
+    "name": "Hashicorp direct install from mirror",
     "id": "hashicorp-direct-install-from-mirror",
     "version": "1.0.0",
     "description": "Download hashicorp product from any mirror you like (support x86/arm aarch)",
